--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.0",
+    "@babel/polyfill": "^7.0.0",    
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "query-string": "^4.3.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
